------------------------------
AmiSSL Open Source - ChangeLog
------------------------------

$Id$
$URL$

2014-07-08 Jens Maus <mail@jens-maus.de>

  * misc: merged the OpenSSL 1.0.1h vendor branch onto the trunk and adapted all
    AmiSSL sources accordingly. Note, however, that the sources doesn't completly
    compile without errors and warnings and that linking of the main shared library
    is still not finished. However, we are almost done with the job, so lets put
    the sources upstream so that other (e.g. Thore) can help ;)

2014-06-21 Jens Maus <mail@jens-maus.de>

  * misc: finalized work on port of OpenSSL 0.9.8y to AmiSSL. Now we have a first
    working version of AmiSSL for OS4 which is based on OpenSSL 0.9.8y. Next will
    be porting/merging to OpenSSL 1.0.1 which will be hopefully not such a huge
    effort than porting from 0.9.7 to 0.9.8 took.

2014-06-12 Jens Maus <mail@jens-maus.de>

  * misc: merged the vendor update of OpenSSL 0.9.8y to our 'openssl' top-level
    directory and adapted our build environment accordingly. The build still doesn't
    success until linking the shared library but we are pretty close I would think.

2014-03-13 Jens Maus <mail@jens-maus.de>

  * src/amissl_library.c: slightly improved the multithreading locking mechanism.
  * src/amissl_library.c: removed the restrictions of the IDEA and MDC2 cipher due
    to patents being in place. In fact, the IDEA patent lasted only till 2012
    (see http://en.wikipedia.org/wiki/International_Data_Encryption_Algorithm) and
    the MDC2 cipher patent expired in 2002 (see http://en.wikipedia.org/wiki/MDC-2).
    Also note that the RC5 cipher patent is also going to be expire in 2015.

2014-03-12 Jens Maus <mail@jens-maus.de>

  * misc: adapted all AmiSSL related changes to match and integrate the change from
    OpenSSL 0.9.7g to 0.9.7m. Modified the build environment to get everything more
    smoothly compiled. Also updated the include/xml interface desription files to