@@ -58590,6 +58590,18 @@ STATIC CONST struct EmuTrap stub_main__shadow_DES_check_key = { TRAPINST, TRAPTY
 
 // ---
 
+STATIC void stub_main_ENGINE_load_gost_PPC(uint32 *regarray)
+{
+	struct Library *Base = (struct Library *)regarray[REG68K_A6/4];
+	struct ExtendedLibrary *ExtLib = (struct ExtendedLibrary *)((uint32)Base + Base->lib_PosSize);
+	struct AmiSSLIFace *Self = (struct AmiSSLIFace *)ExtLib->MainIFace;
+
+	Self->ENGINE_load_gost();
+}
+STATIC CONST struct EmuTrap stub_main_ENGINE_load_gost = { TRAPINST, TRAPTYPE, (uint32 (*)(uint32 *))stub_main_ENGINE_load_gost_PPC };
+
+// ---
+
 CONST CONST_APTR main_VecTable68K[] =
 {
 	&stub_main_Open,
@@ -62501,6 +62513,7 @@ CONST CONST_APTR main_VecTable68K[] =
 	&stub_main_RSA_PSS_PARAMS_it,
 	&stub_main__shadow_DES_rw_mode,
 	&stub_main__shadow_DES_check_key,
+	&stub_main_ENGINE_load_gost,
 	(CONST_APTR)-1
 };
 
